# frinx-services-python-api

./: README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/scripts/: find-nearest-lower-version  release-update
.github/workflows/: pr-check.yml  pr-create.yml  publish-package.yml  release_utils.yml
blueprints-provider/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
blueprints-provider/python/frinx_api/blueprints_provider/: __init__.py
frinx-inventory-server/python/: CHANGELOG.md  RELEASE.md  docker-compose.yml  pyproject.toml
frinx-inventory-server/python/frinx_api/inventory/: __init__.py
inventory/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
inventory/python/frinx_api/inventory/: __init__.py
json-schema/python/: CHANGELOG.md  README.md  RELEASE.md  generate.sh  pyproject.toml
json-schema/python/frinx_api/: header_constants.py
json-schema/python/frinx_api/json_schema/: device_geo_location.py  (+6 more)
performance-monitor/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
performance-monitor/python/env_files/: .env_kafka  .env_performance_monitor
resource-manager/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
schellar/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
topology-discovery/python/: CHANGELOG.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
uniconfig/python/: CHANGELOG.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  generate.sh  generate_rest_api.py  pyproject.toml
uniconfig/python/patches/: 01_ignore_createsubscription_ruff_errors.patch  02_fix_discover_address_spell_check.patch  03_fix_discover_port_constrains.patch  04_snmp_topology_fix_field_name.patch  05_fix_generated_json_typing.patch  rest_api_patch.txt
utils/graphql-pydantic-converter/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
utils/graphql-pydantic-converter/graphql_pydantic_converter/: __main__.py  graphql_types.py  schema_converter.py
utils/graphql-pydantic-converter/tests/: model.py  render_models.py  test_graphql_generator.py
utils/graphql-pydantic-generator/: CHANGELOG.md  README.md  pyproject.toml
utils/graphql-pydantic-generator/graphql_pydantic_generator/: __main__.py
utils/json-schemas/: device_geo_location.json  device_parent.json  device_registration.json  device_removal.json  device_update.json  performance_message.json  performance_notification.json
(+102 files in other folders)
