[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2"
click = "^8.1.7"
graphql-core = "^3.2.5"
datamodel-code-generator = "^0.26.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
mypy = "1.3.0"
pyright = "^1.1.323"
pytest = "^7.4.1"

[tool.poetry]
packages = [{ include = "graphql_pydantic_generator" }]
name = "graphql-pydantic-generator"
description = "A utility wrapper for datamodel-code-generator that processes a root directory containing GraphQL schema files, including any nested subdirectories, merges all the schemas into a single file, and generates Pydantic classes."
authors = ["Marek Pastorek <marek.pastorek@elisapolystar.com>"]
version = '0.1.0'
readme = ["README.md", "CHANGELOG.md"]
keywords = ["graphql", "pydantic", "generator"]
license = "Apache 2.0"

[tool.poetry.scripts]
generate = "graphql_pydantic_generator.__main__:generate"

[tool.pyright]
include = ['graphql_pydantic_generator']
reportGeneralTypeIssues = "information"
reportCallIssue = "information"
reportIncompatibleVariableOverride = "information"

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'E', 'F', 'N', 'PL']
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
target-version = "py310"
exclude = ['tests']

[tool.ruff.isort]
known-first-party = ['graphql_pydantic_generator', 'tests']
force-single-line = true

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.mccabe]
max-complexity = 14

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args = 10
max-branches=14

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.mypy]
python_version = "3.10"
plugins = [ "pydantic.mypy" ]
explicit_package_bases = true
namespace_packages = true
strict = true
pretty = true
ignore_missing_imports = true
disallow_untyped_defs= true
disallow_subclassing_any = false
warn_unused_ignores = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
python_files = 'tests/*'